# CE-SQL

./: README.md  pyproject.toml
cesql/: __init__.py
cesql/compiler/: test_spec.py
cesql/core/: pipeline.py  types.py
cesql/diagnosis/: diagnoser.py
cesql/oracle/: candidate_column_ranker.py  oracle_adapter.py  rule_extractor.py  schema_grounding.py  value_grounding.py
cesql/repair/: repair_engine.py
cesql/sql/: components.py  execution.py  parser.py  patcher.py
cesql/suspicious/: detector.py
cesql/synthesis/: count_distinct.py  predicate_contrast.py  schema_rows.py  synthesizer.py
cesql/testing/: local_checkers.py  verifier.py
examples/running_example/: candidate.sql  question.txt
scripts/: run_running_example.py
tests/: test_running_example.py
