[project]
name = "ce-sql-demo"
version = "0.1.0"
description = "CE-SQL: Counter-Example Guided SQL Repair — Paper Submission Demo"
requires-python = ">=3.10"
dependencies = [
  "sqlglot>=25.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
